# composable-model-graph

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
docs/: 00-overview.md  (+9 more)
python/: README.md  pyproject.toml
python/examples/05-evaluators/: README.md  expected-output.txt  main.py
python/examples/06-skill-routing/: README.md  expected-output.txt  main.py
python/examples/08-system-simulation/: README.md  main.py
python/examples/09-best-time-to-implement/: README.md  expected-output.txt  main.py
python/examples/10-best-time-to-implement-ai/: README.md  expected-output.txt  main.py  model.py  requirements.txt  sample-live-output.txt
python/examples/11-inverse-parameter/: EXPLAINER.md  README.md  expected-output.txt  main.py
python/examples/12-fan-out-merge/: main.py
python/examples/13-track-snapping/: expected-output.txt  main.py
python/examples/14-hidden-regime/: expected-output.txt  main.py
python/examples/15-typo-decode/: main.py
python/examples/16-estimation-in-the-graph/: README.md  expected-output.txt  main.py
python/src/composable_model_graph/: __init__.py
python/src/composable_model_graph/core/: __init__.py  _format.py  compare.py  graph.py  score.py  types.py
python/src/composable_model_graph/estimation/: __init__.py  trellis.py
python/src/composable_model_graph/evaluators/: __init__.py  composite.py  deep_equal.py  exact_match.py  numeric_error.py  threshold.py
python/tests/: test_compare.py  test_estimation.py  test_evaluators.py  test_feedback.py  test_graph_evaluation.py  test_smoke.py
(+66 files in other folders)
